--- a/src/components/cumbre2026/RegistroFlow.astro
+++ b/src/components/cumbre2026/RegistroFlow.astro
@@ -198,8 +198,8 @@
 
      formatType(type) {
         const labels = {
-           lodging: 'Adulto con alojamiento',
-           no_lodging: 'Adulto sin alojamiento',
+           lodging: 'Asistencia + alimentación + alojamiento',
+           no_lodging: 'Asistencia + alimentación (sin alojamiento)',
            child_0_7: 'Niño 0-7',
            child_7_13: 'Niño 7-13'
         };
