--- a/src/pages/portal/index.astro
+++ b/src/pages/portal/index.astro
@@ -5,7 +5,7 @@
       <aside class="w-full lg:w-72 bg-[#293C74] text-white z-20 shadow-xl">
         <div class="p-8 lg:sticky lg:top-0 flex flex-col h-full">
           <div class="flex items-center gap-4 mb-12 px-2">
-            <img src="/images/cumbre/Logo Ministerio Maná Blanco.svg" alt="Ministerio Maná" class="h-12 w-auto">
+            <img src="/images/cumbre/logo-ministerio-mana-blanco.svg" alt="Ministerio Maná" class="h-12 w-auto">
             <div class="border-l border-white/20 pl-4">
               <p class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] mb-1">Portal Maná</p>
               <h2 class="text-xs font-display font-bold text-white/60">Panel General</h2>
