fix(portal): allow inline scripts via CSP nonce

--- a/src/pages/portal/index.astro
+++ b/src/pages/portal/index.astro
@@ -346,7 +346,7 @@
     }
   </style>
 
-  <script type="module">
+  <script type="module" nonce={Astro.locals.cspNonce}>
     import { getSupabaseBrowserClient } from '@lib/supabaseBrowser';
     import { gsap } from 'gsap';
 
