--- a/src/components/ChurchesMap.astro
+++ b/src/components/ChurchesMap.astro
@@ -1,4 +1,5 @@
 ---
+import churchesMapScript from '../scripts/churches-map.js?url';
 const id = 'churches-map';
 ---
 
@@ -15,4 +16,4 @@ const id = 'churches-map';
 </noscript>
 
 <!-- Script bundlado por Vite: inicializa Leaflet -->
-<script type="module" src="/src/scripts/churches-map.ts"></script>
+<script type="module" src={churchesMapScript}></script>
