--- a/src/pages/portal/ingresar.astro
+++ b/src/pages/portal/ingresar.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro';
-import portalLoginScript from '../../scripts/portal-login.ts?url';
+import portalLoginScript from '../../scripts/portal-login.js?url';
 ---
 
 <BaseLayout title="Accede al Portal Maná | Ministerio Maná" description="Ingresa al Portal Maná para ver tus aportes y gestionar tu inscripción.">
