--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,8 +4,8 @@ import SEO from '@components/SEO.astro';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
 import globalStyles from '../styles/global.css?url';
-import lenisScript from '../scripts/lenis.ts?url';
-import homeAnimationsScript from '../scripts/home-animations.ts?url';
+import lenisScript from '../scripts/lenis.js?url';
+import homeAnimationsScript from '../scripts/home-animations.js?url';
 
 const {
   title,
