--- a/src/components/AccountButton.astro
+++ b/src/components/AccountButton.astro
@@ -1,7 +1,7 @@
 ---
 // This component detects if user has an active session
 // Shows "Iniciar sesión" for guests or account dropdown for logged users
-import accountButtonScript from '../scripts/account-button.js?url';
+
 ---
 
 <div id="account-button-container" class="relative">
@@ -50,4 +50,4 @@ import accountButtonScript from '../scripts/account-button.js?url';
   </details>
 </div>
 
-<script type="module" src={accountButtonScript}></script>
+<script src="../scripts/account-button.js"></script>
