--- a/src/pages/portal/ingresar.astro
+++ b/src/pages/portal/ingresar.astro
@@ -81,5 +81,5 @@ import BaseLayout from '@layouts/BaseLayout.astro';
   </main>
 
 
-  <script src="../../scripts/portal-login.js"></script>
+  <script src="/src/scripts/portal-login.js"></script>
 </BaseLayout>
