--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -35,7 +35,7 @@ const {
     {!hideFooter && <Footer />}
     
     <!-- Smooth Scroll & Parallax Animations -->
-    <script src="../scripts/lenis.js"></script>
-    <script src="../scripts/home-animations.js"></script>
+    <script src="/src/scripts/lenis.js"></script>
+    <script src="/src/scripts/home-animations.js"></script>
   </body>
 </html>
